animation toggling added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div id = "form" class="col s3">
         <form>
-          <p>Add an anime:</p> 
+          <h6>Add an anime:</h6> 
           <input id="newTopic" type="text" name="anime" value="">
             <br>
           <input id="submit" type="submit" value="submit">
