--- a/index.html
+++ b/index.html
@@ -10,31 +10,28 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <h3>Anime GIFs Finder</h3>
-  <div class="container"></div>
-    <div id="topics" class="row">
+   <nav>
+      <h3>Anime GIFs Finder</h3>
+   </nav>
+   <div class="container"></div>
+   <div id="topics" class="row">
       <!-- Topic buttons go here -->
-    </div>
+   </div>
     
-    <div class="row">
+   <div class="row">
       <div id = "gifs" class="col s9">
         <!-- GIFS go here -->
         
       </div>
       <div id = "form" class="col s3">
-        <form>
-          <h6>Add an anime:</h6> 
-          <input id="newTopic" type="text" name="anime" value="">
+         <form>
+            <h6>Add an anime or keyword:</h6> 
+            <input id="newTopic" type="text" name="anime" value="">
             <br>
-          <input id="submit" type="submit" value="submit">
-        </form>
-        <!-- <p>Add an anime</p>
-        <input id = "newTopic" type="text">
-        <button id = "submit">Submit</button> -->
+            <input id="submit" type="submit" value="submit">
+         </form>
       </div>
-
-    </div>
-  </div>  
+   </div>  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="./assets/javascript/app.js"></script>
